# keystone

./: .gitignore  Cargo.toml  README.md  Stellar-Escrow-Dapp-15Day-Plan.md  crate_tests.bat  dalek1.txt  dalek2.txt  day6_verify.bat  error_log.txt  final_v6_commit.txt  git_log.txt  git_status.txt  gitlog.txt  gitlog2.txt  gitlog3.txt  install.bat  keystone (2).html  keystone-fixed.html  keystone_ui_preview.html  next_help.txt  npm_versions.txt  reflog.txt  reflog8.txt  render.yaml  test_and_build.bat  test_log.txt  test_results.txt  tree_final.txt  v6_fix_log.txt
backend/: .env.example  README.md  check_col.js  package-lock.json  package.json  secrets.json  test_insert.js  tsconfig.json
backend/src/: index.ts
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/escrow/test_snapshots/test/: test_create_job_and_milestones.1.json  test_dispute_and_refund.1.json  test_dispute_and_release.1.json  test_dispute_and_release_to_approved.1.json  test_distribute_without_router.1.json  test_double_distribute_milestone.1.json  test_double_fund_milestone.1.json  test_fee_router_unauthorized_route_funds.1.json  test_payout_unauthorized_execute_payout.1.json  test_self_dealing_rejection.1.json  test_unauthorized_add_milestone.1.json  test_unauthorized_raise_dispute.1.json  test_unauthorized_resolve_dispute_by_client.1.json  test_unauthorized_submit_milestone.1.json
frontend/: fix_env.js  git_log_clean.txt  gitlog_display.txt  out.txt  package-lock.json  package.json  test_rpc.js  test_sim.js  tsc_errors.txt
scripts/: deploy.ps1
(+29 files in other folders)
